# LegislativeDefinitionsAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
LegalDefAgent/app/: api.py  app.py  client.py  run_app.py  streamlit_app.py  test.py  test2.py
LegalDefAgent/src/: agent.py  agent2.py  config.py  definition_search.py  llm.py  models.py  prompts.py  retriever.py  schema.py  settings.py  tools.py  utils.py
data/: .gitignore
docker/: Dockerfile.app  Dockerfile.base  Dockerfile.service
evaluation/: Evaluation_LEOS_annotato_def.xlsx  evaluation.ipynb  gpt-4o-mini_leos_generation.json  gpt-4o-mini_leos_generation.xlsx  gpt-4o-mini_leos_retrieval.json  together-llama-3.1-8B-Instruct-Turbo_leos_generation.json  together-llama-3.1-8b-Instruct-Turbo_leos_generation.json  together-llama-3.3-70B-Instruct-Turbo_legislation_it.json  together-llama-3.3-70B-Instruct-Turbo_leos_generation.xlsx  together-llama-3.3-70B-Instruct-Turbo_leos_retrieval.xlsx  together-llama-3.3-70B-Instruct-Turbo_lexdrafter_generation.json  together-llama-3.3-70B-Instruct-Turbo_lexdrafter_generation_.json  together-llama-3.3-70B-Instruct-Turbo_lexdrafter_retrieval.json  together-llama-3.3-70B-Instruct-Turbo_lexdrafter_retrieval_.json  together-llama-3.3-70B-Instruct-Turbo_point_in_time_.json
evaluation/datasets/: definitions_timeline.json
evaluation/results/: together-llama-3.3-70B-Instruct-Turbo_leos_generation.json  together-llama-3.3-70B-Instruct-Turbo_lexdrafter_merged.json  together-llama-3.3-70B-Instruct-Turbo_lexdrafter_retrieval.json  (+2 more)
evaluation/v1/: evaluation.ipynb
notebooks/: 01 - extract_definitions.ipynb  02 - create_def_embeddings.ipynb  03 - definitions_RAG.ipynb  04 - DefAgent.ipynb  FINAL.ipynb  changing_defs.pkl  command.ipynb  create_vector_db.ipynb  dataset_exploration.ipynb  definition_timeline.csv  exist.ipynb  feature_dataset_creation.ipynb  human_in_the_loop.ipynb  legal_definition_agent.ipynb  self_rag.ipynb
scripts/: create_vec_db.py  embed_definitions.py  extract_definitions.py  get_frbr_mapping.py  initiate_vectorstore.py  populate_vectorstore.py  run_service.py  streamlit_app.py
src/: agent.py  tools.py  utils.py
(+124 files in other folders)
