[project]
name = "LegalDefAgent"
version = "1.0"
description = "A legal definition retrieval and generation system."
authors = [{name = "Leonardo Zilli", email = "leonardo.zilli@studio.unibo.it"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "flagembedding>=1.3.5",
    "ipython>=9.5.0",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.7",
    "langchain-milvus>=0.2.1",
    "langchain-mistralai>=0.2.11",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-together>=0.3.1",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "peft>=0.17.1",
    "polars>=1.33.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyexistdb>=1.0.1",
    "pymilvus[milvus-lite,model]>=2.6.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "typer>=0.17.3",
    "uvicorn>=0.35.0",
    "vllm>=0.15.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.4",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
legaldefagent = "legaldefagent.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
lines-after-imports = 2
